// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders all variants and all sizes of the button 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="space-y-6"
      >
        <div
          class="flex items-center gap-4"
        >
          <button
            class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-xs px-2 py-1 border-transparent text-white bg-blue-600 hover:bg-blue-700 focus:ring-blue-500"
          >
            primary
          </button>
          <button
            class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-sm px-3 py-2.5 leading-4 border-transparent text-white bg-blue-600 hover:bg-blue-700 focus:ring-blue-500"
          >
            primary
          </button>
          <button
            class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-sm px-4 py-2.5 border-transparent text-white bg-blue-600 hover:bg-blue-700 focus:ring-blue-500"
          >
            primary
          </button>
          <button
            class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-base px-4 py-2 border-transparent text-white bg-blue-600 hover:bg-blue-700 focus:ring-blue-500"
          >
            primary
          </button>
          <button
            class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-base px-6 py-3 border-transparent text-white bg-blue-600 hover:bg-blue-700 focus:ring-blue-500"
          >
            primary
          </button>
        </div>
        <div
          class="flex items-center gap-4"
        >
          <button
            class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-xs px-2 py-1 border-transparent text-indigo-700 bg-indigo-100 hover:bg-indigo-200 focus:ring-indigo-500"
          >
            secondary
          </button>
          <button
            class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-sm px-3 py-2.5 leading-4 border-transparent text-indigo-700 bg-indigo-100 hover:bg-indigo-200 focus:ring-indigo-500"
          >
            secondary
          </button>
          <button
            class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-sm px-4 py-2.5 border-transparent text-indigo-700 bg-indigo-100 hover:bg-indigo-200 focus:ring-indigo-500"
          >
            secondary
          </button>
          <button
            class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-base px-4 py-2 border-transparent text-indigo-700 bg-indigo-100 hover:bg-indigo-200 focus:ring-indigo-500"
          >
            secondary
          </button>
          <button
            class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-base px-6 py-3 border-transparent text-indigo-700 bg-indigo-100 hover:bg-indigo-200 focus:ring-indigo-500"
          >
            secondary
          </button>
        </div>
        <div
          class="flex items-center gap-4"
        >
          <button
            class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-xs px-2 py-1 text-gray-800 border-gray-400 bg-white hover:bg-gray-50"
          >
            white
          </button>
          <button
            class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-sm px-3 py-2.5 leading-4 text-gray-800 border-gray-400 bg-white hover:bg-gray-50"
          >
            white
          </button>
          <button
            class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-sm px-4 py-2.5 text-gray-800 border-gray-400 bg-white hover:bg-gray-50"
          >
            white
          </button>
          <button
            class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-base px-4 py-2 text-gray-800 border-gray-400 bg-white hover:bg-gray-50"
          >
            white
          </button>
          <button
            class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-base px-6 py-3 text-gray-800 border-gray-400 bg-white hover:bg-gray-50"
          >
            white
          </button>
        </div>
        <div
          class="flex items-center gap-4"
        >
          <button
            class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-xs px-2 py-1 text-gray-800 border-transparent shadow-none hover:bg-gray-100"
          >
            outlined
          </button>
          <button
            class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-sm px-3 py-2.5 leading-4 text-gray-800 border-transparent shadow-none hover:bg-gray-100"
          >
            outlined
          </button>
          <button
            class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-sm px-4 py-2.5 text-gray-800 border-transparent shadow-none hover:bg-gray-100"
          >
            outlined
          </button>
          <button
            class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-base px-4 py-2 text-gray-800 border-transparent shadow-none hover:bg-gray-100"
          >
            outlined
          </button>
          <button
            class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-base px-6 py-3 text-gray-800 border-transparent shadow-none hover:bg-gray-100"
          >
            outlined
          </button>
        </div>
        <div
          class="flex items-center gap-4"
        >
          <button
            class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-xs px-2 py-1"
          >
            custom
          </button>
          <button
            class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-sm px-3 py-2.5 leading-4"
          >
            custom
          </button>
          <button
            class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-sm px-4 py-2.5"
          >
            custom
          </button>
          <button
            class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-base px-4 py-2"
          >
            custom
          </button>
          <button
            class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-base px-6 py-3"
          >
            custom
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="space-y-6"
    >
      <div
        class="flex items-center gap-4"
      >
        <button
          class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-xs px-2 py-1 border-transparent text-white bg-blue-600 hover:bg-blue-700 focus:ring-blue-500"
        >
          primary
        </button>
        <button
          class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-sm px-3 py-2.5 leading-4 border-transparent text-white bg-blue-600 hover:bg-blue-700 focus:ring-blue-500"
        >
          primary
        </button>
        <button
          class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-sm px-4 py-2.5 border-transparent text-white bg-blue-600 hover:bg-blue-700 focus:ring-blue-500"
        >
          primary
        </button>
        <button
          class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-base px-4 py-2 border-transparent text-white bg-blue-600 hover:bg-blue-700 focus:ring-blue-500"
        >
          primary
        </button>
        <button
          class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-base px-6 py-3 border-transparent text-white bg-blue-600 hover:bg-blue-700 focus:ring-blue-500"
        >
          primary
        </button>
      </div>
      <div
        class="flex items-center gap-4"
      >
        <button
          class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-xs px-2 py-1 border-transparent text-indigo-700 bg-indigo-100 hover:bg-indigo-200 focus:ring-indigo-500"
        >
          secondary
        </button>
        <button
          class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-sm px-3 py-2.5 leading-4 border-transparent text-indigo-700 bg-indigo-100 hover:bg-indigo-200 focus:ring-indigo-500"
        >
          secondary
        </button>
        <button
          class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-sm px-4 py-2.5 border-transparent text-indigo-700 bg-indigo-100 hover:bg-indigo-200 focus:ring-indigo-500"
        >
          secondary
        </button>
        <button
          class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-base px-4 py-2 border-transparent text-indigo-700 bg-indigo-100 hover:bg-indigo-200 focus:ring-indigo-500"
        >
          secondary
        </button>
        <button
          class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-base px-6 py-3 border-transparent text-indigo-700 bg-indigo-100 hover:bg-indigo-200 focus:ring-indigo-500"
        >
          secondary
        </button>
      </div>
      <div
        class="flex items-center gap-4"
      >
        <button
          class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-xs px-2 py-1 text-gray-800 border-gray-400 bg-white hover:bg-gray-50"
        >
          white
        </button>
        <button
          class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-sm px-3 py-2.5 leading-4 text-gray-800 border-gray-400 bg-white hover:bg-gray-50"
        >
          white
        </button>
        <button
          class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-sm px-4 py-2.5 text-gray-800 border-gray-400 bg-white hover:bg-gray-50"
        >
          white
        </button>
        <button
          class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-base px-4 py-2 text-gray-800 border-gray-400 bg-white hover:bg-gray-50"
        >
          white
        </button>
        <button
          class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-base px-6 py-3 text-gray-800 border-gray-400 bg-white hover:bg-gray-50"
        >
          white
        </button>
      </div>
      <div
        class="flex items-center gap-4"
      >
        <button
          class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-xs px-2 py-1 text-gray-800 border-transparent shadow-none hover:bg-gray-100"
        >
          outlined
        </button>
        <button
          class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-sm px-3 py-2.5 leading-4 text-gray-800 border-transparent shadow-none hover:bg-gray-100"
        >
          outlined
        </button>
        <button
          class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-sm px-4 py-2.5 text-gray-800 border-transparent shadow-none hover:bg-gray-100"
        >
          outlined
        </button>
        <button
          class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-base px-4 py-2 text-gray-800 border-transparent shadow-none hover:bg-gray-100"
        >
          outlined
        </button>
        <button
          class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-base px-6 py-3 text-gray-800 border-transparent shadow-none hover:bg-gray-100"
        >
          outlined
        </button>
      </div>
      <div
        class="flex items-center gap-4"
      >
        <button
          class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-xs px-2 py-1"
        >
          custom
        </button>
        <button
          class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-sm px-3 py-2.5 leading-4"
        >
          custom
        </button>
        <button
          class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-sm px-4 py-2.5"
        >
          custom
        </button>
        <button
          class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-base px-4 py-2"
        >
          custom
        </button>
        <button
          class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-base px-6 py-3"
        >
          custom
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Button renders an icon in front of the label 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-sm px-3 py-2.5 leading-4 border-transparent text-white bg-blue-600 hover:bg-blue-700 focus:ring-blue-500"
        disabled=""
      >
        <div
          aria-hidden="true"
          class="-ml-1 mr-1.5"
        >
          <svg
            aria-hidden="true"
            class="w-4"
            data-testid="icon"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 4.5v15m7.5-7.5h-15"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </div>
        button
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="relative shadow-sm rounded h-fit
    focus:outline-none focus:ring-2 focus:ring-offset-2
    inline-flex items-center justify-center transition-all
    border font-medium
    disabled:opacity-50 disabled:cursor-not-allowed
   text-sm px-3 py-2.5 leading-4 border-transparent text-white bg-blue-600 hover:bg-blue-700 focus:ring-blue-500"
      disabled=""
    >
      <div
        aria-hidden="true"
        class="-ml-1 mr-1.5"
      >
        <svg
          aria-hidden="true"
          class="w-4"
          data-testid="icon"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 4.5v15m7.5-7.5h-15"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </div>
      button
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
